# WatchMan

build-watchman-Desktop-Défaut/: CMakeCache.txt  Makefile  cmake_install.cmake  watchman.cbp
watchman/: CMakeLists.txt
watchman/config/: cam_config.xml  display.xml  processing.xml
watchman/data_struct/: data_structure.hpp
watchman/include/: camera.hpp  load_config.hpp  main_run.hpp  processing.hpp  read_flux.hpp  show_flux.hpp  video_flux.hpp  video_processing.hpp
watchman/src/: camera.cpp  load_config.cpp  main.cpp  main_run.cpp  processing.cpp  read_flux.cpp  show_flux.cpp  video_flux.cpp  video_processing.cpp
watchman/tools/: console_display.cpp  console_display.hpp
